# py-prom-graf-poc

./: Dockerfile  docker-compose.yaml  pyproject.toml  run.py
grafana/: grafana.ini
prometheus/: prometheus.yml
