[tool.poetry]
name = "prom-graf-usgs"
version = "0.1.0"
description = ""
authors = ["Alex Jones <alexander.jones@softwire.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
prometheus-client = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
